namespace UniversalDataFlow.Core.Diagnostics;

public enum ValidationPolicy
{
    Continue,
    SkipRow,
    StopJob
}
