namespace UniversalDataFlow.Core.Runtime;

public enum RowProcessingResult
{
    Accepted,
    Skipped,
    StopJob
}
